--- a/_/sass/layout/_post.scss
+++ b/_/sass/layout/_post.scss
@@ -6,11 +6,12 @@ $p-bottom: 1.35597em;
 }
 
 .post {
+	transition: all 0.2s ease;
 	width: 100%;
 	height: 100%;
 	
 	margin-bottom: 2.5em;
-	padding: 3.7em 4em 4em 4em;
+	padding: 3.7em 1em 4em 1em;
 	
 	background: $wet-asphalt;
 	color: $clouds;
